[package]
name = "turbo_ml_dhakshin"
version = "0.1.17"
edition = "2021"
authors = ["Kotha Dhakshin <dhakshinkotha2007@example.com>"]
description = "High-performance ML primitives powered by Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Dhakshin2007/turbo_ml"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",  
    "Programming Language :: Rust",
]

[lib]
# 👇 This is the Python import name
name = "turbo_ml"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.8"

# 🔥 THIS IS THE IMPORTANT PART
[dependencies.pyo3]
version = "0.21"
features = [
    "extension-module",
    "abi3-py38"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
